2003-09-11  Gary Thomas  <gary@mlbassoc.com>

	* include/eth_phy.h: Minor improvement in status bitfield [comments]

	* doc/eth_phy.sgml: New file - add basic documentation on PHY API.

2003-08-26  Gary Thomas  <gary@mlbassoc.com>

	* src/DP83847.c: 
	* src/AM79C874.c: New file(s) - driver(s) for PHY devices.

	* src/eth_phy.c: 
	* include/eth_phy_dev.h: 
	* include/eth_phy.h: 
	* cdl/phy_eth_drivers.cdl: Add device/chip specific drivers.

2003-08-19  Gary Thomas  <gary@mlbassoc.com>

	* src/eth_phy.c: 
	* include/eth_phy.h: 
	* cdl/phy_eth_drivers.cdl: New file(s) - generic API for dealing
	with ethernet PHY devices, allowing network drivers more flexibility.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
// Copyright (C) 2003 Gary Thomas
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it
// with other works to produce a work based on this file, this file does not
// by itself cause the resulting work to be covered by the GNU General Public